--- a/module_0/M0_NB1_GettingStarted.ipynb
+++ b/module_0/M0_NB1_GettingStarted.ipynb
@@ -11,8 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Getting started with notebooks\n",
-    "## Anaconda: Jupyter and Python"
+    "# Getting started with Jupyter Notebooks"
    ]
   },
   {
@@ -50,21 +49,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Jupyter Notebooks](http://jupyter-notebook.readthedocs.io/en/latest/notebook.html) are essentially documents that are designed to be easily read by both humans and computers. The elements of a typical notebook include descriptions and analyses, as well as executable code. You can share your code with others and communicate your process and results with a wide array of audiences, from technical to non-technical. This type of interactive computing allows for reporting as well as user interaction and is therefore ideally suited for educational purposes. Jupyter Notebooks provide a web-based application that is suited to capture the whole computation process: developing, documenting, and executing code, as well as communicating the results. \n",
+    "[Jupyter Notebooks](http://jupyter.org/) are essentially documents that are designed to be easily read by both humans and computers. Jupyter Notebooks provide a web-based application that is suited to capture the whole computation process: developing, documenting, and executing code, as well as communicating the results. The elements of a typical notebook include descriptions and analyses, as well as executable code. You can share your code with others and communicate your process and results with a wide array of audiences, from technical to non-technical. This type of interactive computing allows for reporting as well as user interaction and is therefore ideally suited for educational purposes.  \n",
     "\n",
     "> **Note**\n",
     "\n",
     "> [Try Jupyter](http://jupyter.readthedocs.io/en/latest/tryjupyter.html) is a platform from which you can try Jupyter without installing it onto your system. Please note that this is a service provided by Jupyter and that you may experience delays in cases where many people try to access the service at the same time.\n",
     "\n",
-    "For more information, refer to the [Jupyter Documentation](http://jupyter.readthedocs.io/en/latest/tryjupyter.html).\n",
+    "> For more information, refer to the [Jupyter Documentation](https://jupyter.readthedocs.io/en/latest/).\n",
+    "\n",
+    "During this course, you will only use Python 3 based Jupyter Notebooks and the supplied kernel is all you need to complete the exercises. \n",
     "\n",
     "> **Note**:\n",
     "\n",
-    "> During this course, you will only use Python 3 based Jupyter Notebooks. \n",
+    "> A ‘kernel’ is a program that runs and introspects the user’s code. The Anaconda distribution used in this course includes a kernel for Python 3 code. Kernels for Python 2.7, as well as for [several other programming languages](https://github.com/jupyter/jupyter/wiki/Jupyter-kernels) such as R, Julia, Octave are available, but would need to be installed separately if you plan to set up your own server in the future. Managing multiple environments is outside the scope of this course.\n",
     "\n",
-    "> A ‘kernel’ is a program that runs and introspects the user’s code. The Anaconda distribution used in this course includes a kernel for Python 3 code. Kernels for Python 2.7, as well as for [several other programming languages](https://github.com/jupyter/jupyter/wiki/Jupyter-kernels) such as R, Julia, Octave are available, but needs to be installed separately on your server. Managing multiple environments is outside the scope of this course.\n",
-    "\n",
-    "> Notebooks differ from Integrated Development Envtironments (IDEs) in the sense that they are typically used to interactively analyze and visualize datasets. IDEs are used to create standalone scripts. Should your focus be on pure scripts, which run as standalone items, you can refer to the links below for Python IDEs.\n",
+    "Notebooks differ from Integrated Development Environments (IDEs) in the sense that they are typically used to interactively analyze and visualize datasets. IDEs are used to create standalone scripts. Should your focus be on pure scripts which run as standalone items, you can refer to the links below for Python IDEs. You will not make use of IDE's during this course.\n",
     "\n",
     "> - [Python IDE for programmers](http://noeticforce.com/best-python-ide-for-programmers-windows-and-mac)\n",
     "\n",
@@ -119,7 +118,7 @@
     "<br>\n",
     "<div class=\"alert alert-warning\">\n",
     "<b>Try this</b><br>\n",
-    "Select the code cell below (shaded in grey) and press the ▶ (run cell) button in the toolbar above to run it.<br>\n",
+    "Select the code cell (shaded in grey) below by inserting your cursor and press the ▶ (run cell) button in the toolbar above to run it.<br>\n",
     "Alternatively, you can use the \"shift + enter\" shortcut command to run the cell.\n",
     "</div>"
    ]
@@ -127,7 +126,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(\"hello world\")"
@@ -145,18 +146,21 @@
     "> In Module 1 you will be provided with a notebook containing Python basics to prepare you for the remainder of the course.\n",
     "\n",
     "### 1.4.1 Performing calculations\n",
-    "While it is possible to perform direct calculations, such as those shown in the cell below, you would typically assign the output (of a calculation) to variables for reuse in subsequent calculations or functions. \n",
+    "While it is possible to perform direct calculations, such as those shown in the cell below, you would typically assign the output of a calculation to variables for reuse in subsequent calculations or functions. \n",
     "<br><br>\n",
     "<div class=\"alert alert-warning\">\n",
     "<b>Execute the code cell below.</b><br>\n",
-    "You will be provided with template notebooks where you need to execute the cells in sequence. Although this note will not be repeated in all cells, you can execute or run the code cells as demonstrated in the \"hello world\" example above.\n",
+    "You will be provided with template notebooks where you need to execute the cells in sequence. Although this note will not be repeated in all cells, you can execute or run the code cells as demonstrated in the \"hello world\" example above.<br><br>\n",
+    "Notebooks are set up to load libraries and data, create variables and perform calculations that are required by later sections and it is therefore very important that you execute all code cells in sequence from the top to bottom throughout the course.\n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "2 + 2"
@@ -197,7 +201,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Print the value of variable c.\n",
@@ -226,7 +232,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print('Hello', yourname)"
@@ -237,7 +245,7 @@
    "metadata": {},
    "source": [
     "### 1.4.4 Writing code\n",
-    "You can use built-in Python functions and write your own functions to make tasks reproducible. The two cells below define a function and then execute it. Run them to see the results."
+    "You can use built-in Python functions and write your own functions to make tasks repeatable. The two cells below define a function and then execute it. Run them to see the results."
    ]
   },
   {
@@ -266,7 +274,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Execute your function.\n",
@@ -285,7 +295,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Set a new variable, d, equal to 10 and print the variable.\n",
@@ -313,8 +325,8 @@
     "# Import system configuration.\n",
     "import sys\n",
     "\n",
-    "# Check whether Numpy package is available in system.\n",
-    "'numpy' in sys.modules"
+    "# Check whether Pandas package is available in system.\n",
+    "'pandas' in sys.modules"
    ]
   },
   {
@@ -360,7 +372,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also display the help function by using the ? symbol, as shown below. Close the output by selecting the x at the top right corner (of the output) once you have reviewed it.\n",
+    "You can also display the help function by using the ? symbol, as shown below. Close the output by clicking the x at the top right corner (of the output) once you have reviewed it.\n",
     "\n",
     "![Pandas help function](images/Pandas_Help.png \"Pandas help function.\")"
    ]
@@ -409,7 +421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once you have selected a library, you can also use the autocomplete to show the help function and the input parameters that can be utilized in a specific library. Place your cursor after the full stop in the cell below and press \"Shift+Tab\" to review the input parameters available to the specific library."
+    "Once you have selected a library, you can also use the autocomplete to show the help function and the input parameters that can be utilized in a specific library. Place your cursor after the opening parenthesis in the cell below and press \"Shift+Tab\" to review the input parameters available to the specific library."
    ]
   },
   {
@@ -455,14 +467,14 @@
     "<br>\n",
     "<div class=\"alert alert-warning\">\n",
     "<b>Note</b>:<br>\n",
-    "You will often have multiple notebooks running at the same time, but it is good practice to shut down notebooks that are not in use. This is because you typically have limited resources on the machine hosting your notebooks or pay for the amount of cloud resources that you consume. Shutting down notebooks that are not in use frees up resources for computational purposes, which enables improved user experience and results in fewer expenses when hosted on cloud environments.\n",
+    "You will often have multiple notebooks running at the same time, but it is good practice to shut down notebooks that are not in use. This is because you typically have limited resources on the machine hosting your notebooks or pay for the amount of cloud resources that you consume. Shutting down notebooks that are not in use frees up resources for computational purposes, which allows for an improved user experience, faster execution of notebooks, and reduced costs when hosting on your own cloud environments.\n",
     "</div>\n",
     "\n",
-    "You can shut down notebooks in a number of ways. The first way is to select \"File\" and then \"Close and Halt\" (in the drop-down menu) from within the running notebook. The second, recommended way is to navigate to your directory view by selecting the Jupyter logo or switching to a window in which the directory is already open. Then, select the \"Running\" tab at the top of the screen and shut down all unnecessary notebooks by selecting the \"Shutdown\" option on the right of the screen (above the notebooks).\n",
+    "You can shut down notebooks in a number of ways. The first way is to select \"File\" and then \"Close and Halt\" (in the drop-down menu) from within the running notebook. The second (recommended way) is to navigate to your directory view by selecting the Jupyter logo or switching to a window in which the directory is already open. Then, select the \"Running\" tab at the top of the screen and shut down all unnecessary notebooks by selecting the \"Shutdown\" option on the right of the screen (above the notebooks).\n",
     "\n",
     "> ![Running Notebooks](images/NotebooksRunningAll.png \"Image of notebooks currently running.\")\n",
     "\n",
-    "When starting a session, it is recommended that you review all of the notebooks that are currently running, and shut down those not in use. Before leaving, or logging out of, your environment, revisit the “Running” tab on your directory view, and shut down all of the notebooks.\n",
+    "When starting a session, it is recommended that you review all of the notebooks that are currently running, and shut down those not in use. Before leaving or logging out of your environment, revisit the “Running” tab on your directory view, and shut down all of the notebooks.\n",
     "\n",
     "> ![Running Notebooks](images/NotebooksRunningNone.png \"Image of no running notebooks.\")"
    ]
@@ -478,7 +490,7 @@
     "\n",
     "> (Continuum Analytics 2016)\n",
     "\n",
-    "This course is not positioned as a Python training course, but it will introduce the relevant Python constructs for users who are not familiar with it. This section contains additional (optional) resources. You are welcome to explore these resources during the Orientation Module, should you want to explore some of the related topics and improve your Python skills.\n",
+    "This course is not positioned as a Python training course, but it will introduce the relevant Python constructs for users who are not familiar with them. This section contains additional (optional) resources. You are welcome to review these resources during the Orientation Module, should you want to explore some of the related topics and improve your Python skills.\n",
     "\n",
     "> **Python**:\n",
     "\n",
@@ -498,11 +510,11 @@
     "There are no graded activities in this notebook, but you are required to submit this notebook in a valid \".ipynb\" format in order to complete Orientation Module.\n",
     "</div>\n",
     "\n",
-    "Use the following four-step process, when submitting your notebooks for assessment:\n",
+    "Use the following four-step process when submitting your notebooks for assessment:\n",
     "\n",
-    "1. Rename the file by clicking on the notebook name at the top (\"M0NB1_GettingStarted\") and change this to “M0_NB1_YourName”.\n",
-    "2. On the menu at the top left, select “File” and then “Save and Checkpoint”.\n",
-    "3. Save a copy of the changed file to your own laptop or desktop. This needs to be submitted, and also serves as a backup of your files should any of the content on the virtual machine be refreshed. Select “File”, “Download as” and then select “IPython Notebook (.ipynb)” from the menu that appears.\n",
+    "1. Rename the file by clicking on the notebook name at the top (\"M0_NB1_GettingStarted\") and change this to “M0_NB1_YourName”.\n",
+    "2. In the menu at the top left, select “File” and then “Save and Checkpoint”.\n",
+    "3. Save a copy of the changed file to your own (offline) laptop or desktop. This needs to be submitted, and also serves as a backup of your files should any of the content on the virtual machine be refreshed. Select “File”, “Download as” and then select “IPython Notebook (.ipynb)” from the menu that appears.\n",
     "4. Upload this file to the Online Campus."
    ]
   },
