--- a/module_0/M0_NB1_GettingStarted.ipynb
+++ b/module_0/M0_NB1_GettingStarted.ipynb
@@ -91,9 +91,7 @@
     "## 1.2 Running Jupyter\n",
     "For the purpose of this course, your environment has been preconfigured for you. To access your virtual analysis environment, you need to navigate to your Amazon Web Services instance and enter your password (Instance ID) as shown in the image below.\n",
     "\n",
-    "![Login detail](images/Login_Detail.png \"Login detail.\")\n",
-    "\n",
-    "You will find your login details in the “0.12 Activity: Your AWS instance URL” component on the Online Campus in the Orientation Module.\n",
+    "You will find your login details in the “0.9 Activity: Sign in to your virtual analysis environment” component on the Online Campus in the Orientation Module.\n",
     "\n",
     "> **Note**:\n",
     "\n",
@@ -318,7 +316,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Check whether Pandas is installed.\n",
@@ -339,7 +339,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "help('pandas')"
