--- a/module_1/M1_NB2_DataAnalysisBasics.ipynb
+++ b/module_1/M1_NB2_DataAnalysisBasics.ipynb
@@ -173,7 +173,7 @@
     "> One characteristic of the three Vs model – velocity – affects the time-to-value of data from creation, collection, and usage. Data is constantly changing, and knowing its recency is important for understanding its utility. The question to keep in mind when working with any information is: “How rapidly does that information go out of date?” The latency can come from different phases of analysis.\n",
     "\n",
     "- **Range**\n",
-    "> Understanding coverage and granularity of data required for answering research or business questions helps in shaping our hypotheses or what conclusions are possible from data collected\n",
+    "> Understanding coverage and granularity of data required for answering research or business questions helps in shaping our hypotheses or what conclusions are possible from data collected.\n",
     "\n",
     "- **Robustness**\n",
     "> As the volume of the data available for detecting patterns grows exponentially, the number of possible correlations grows a lot faster than the number of meaningful or useful ones. That is, the noise grows faster than the signal, as shown in the figure below.\n",
@@ -181,7 +181,7 @@
     "> Source: [Going Pro in Data Science - What It Takes to Succeed as a Professional Data Scientist by Jerry Overton](http://www.oreilly.com/data/free/going-pro-in-data-science.csp).\n",
     "\n",
     "- **Reliability**\n",
-    ">  An important recurring theme in this course is the importance of correctly collecting data. In social analytics, data collecting using well-established techniques, such as using focus or surveys,  are more often not associated with accurate or reliable data. \n",
+    ">  An recurring theme in this course is the importance of correctly collecting data. In social analytics, data collecting using well-established techniques, such as using focus or surveys,  are more often not associated with accurate or reliable data. \n",
     "\n",
     "\n",
     "## 2.2 Ephemeral vs durable data\n",
@@ -203,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you should have gathered from the previous notebook, Python is an intuitive, beginner-friendly, general-purpose programming language. Unfortunately, because it is a general-purpose language, it lacks out-of-the-box and easy-to-use functionality for data processing and analysis that analysts can use without effort. Because of this, data analysts use Python modules designed specifically to extend Python's base functionality when doing data analysis. One of the modules that will be used extensively in this course is [Pandas](http://pandas.pydata.org/) (short for Python for Data Analysis), which is a module designed around providing flexible data structures and data manipulation in Python. Specifically, Pandas uses the concept of a [data frame](pandas.pydata.org/pandas-docs/stable/dsintro.html), which is defined below:\n",
+    "As you should have gathered from the previous notebook, Python is an intuitive, beginner-friendly, general-purpose programming language. Unfortunately, because it is a general-purpose language, it lacks out-of-the-box and easy-to-use functionality for data processing and analysis that analysts can use without effort. Because of this, data analysts use Python modules designed specifically to extend Python's base functionality when doing data analysis. One of the modules that will be used extensively in this course is [Pandas](http://pandas.pydata.org/) (short for Python for Data Analysis), which is a module designed around providing flexible data structures and data manipulation in Python. Specifically, Pandas uses the concept of a [data frame](https://pandas.pydata.org/pandas-docs/stable/dsintro.html), which is defined below:\n",
     "\n",
     "> A data frame generally refers to \"tabular\" data, that is, a data structure representing cases (rows), each of which consists of a number of observations or measurements (columns). Each row may be treated as a single observation of multiple variables (or fields in relational database systems). Each row and each column has the same data type, but the row (\"record\") data type may be heterogeneous (a tuple of different types), while the column data type must be homogeneous. In addition to the data, data frames usually contain some metadata, for example, column and row names.\n",
     "\n",
@@ -312,7 +312,7 @@
     "- **A collection of name or value pairs**: In various languages, this is realized as an object, record, struct, dictionary, hash table, keyed list, or associative array.\n",
     "- **An ordered list of values**: In most languages, this is realized as an array, vector, list, or sequence.\n",
     "\n",
-    "You can read more about the [Python encoder and decoder](https://docs.python.org/2/library/json.html) in the Python documentation.\n",
+    "You can read more about the [JSON encoder and decoder](https://docs.python.org/3/library/json.html) in the Python documentation.\n",
     "\n",
     "The following example creates a JSON string, and demonstrates how Pandas can be used to read the string."
    ]
@@ -325,7 +325,7 @@
    },
    "outputs": [],
    "source": [
-    "# Create a JSON string that captures details of a John Smith from New York.\n",
+    "# Create a JSON string that captures the details of John Smith from New York.\n",
     "jsonStr = '{\\\n",
     "     \"firstName\": \"John\",\\\n",
     "     \"lastName\": \"Smith\",\\\n",
@@ -528,7 +528,7 @@
     "import pandas as pd\n",
     "import sqlite3\n",
     "\n",
-    "# Read sqlite query results into a pandas DataFrame ordered by id in descedning order.\n",
+    "# Read sqlite query results into a pandas DataFrame ordered by id in descending order.\n",
     "conn = sqlite3.connect(\"example.db\")\n",
     "df = pd.read_sql_query(\"SELECT * from students ORDER BY id desc\", conn)\n",
     "\n",
@@ -537,6 +537,7 @@
     "\n",
     "# Save (commit) the changes.\n",
     "conn.commit()\n",
+    "\n",
     "# Close the connection.\n",
     "conn.close()"
    ]
@@ -546,7 +547,7 @@
    "metadata": {},
    "source": [
     "## 3.2 Data exploration with Pandas\n",
-    "This section introduces other tools for pre-processing and exploring data in Python using Pandas. For this purpose, a data set that was collected using the StudentLife app, built by researchers from Dartmouth College, will be used. The Android app monitored readings from smartphone sensors carried by 48 Dartmouth students during a 10-week term. This was in order to assess their mental health (depression, loneliness, and stress), academic performance (grades across all their classes, term GPA, and cumulative GPA), and behavioral trends (how factors such as stress, sleep, and visits to the gym, change in response to college workload – assignments, midterms, and finals – as the term progresses).\n",
+    "This section introduces other tools for pre-processing and exploring data in Python using Pandas. For this purpose, a data set that was collected using the StudentLife app, built by researchers from Dartmouth College, will be used. The Android app monitored readings from smartphone sensors carried by 48 Dartmouth students during a 10-week term. This was in order to assess their mental health (depression, loneliness, and stress), academic performance (grades across all their classes, term GPA, and cumulative GPA), and behavioral trends (how factors such as stress, sleep, and visits to the gym, change in response to college workload – assignments, midterms, and finals – as the term progressed).\n",
     "\n",
     "Before you continue with the following section, please make sure that you visit [Dartmouth StudentLife](http://studentlife.cs.dartmouth.edu/dataset.html), and review the \"Introduction\" and \"Citation\" paragraphs to familiarize yourself with the privacy statements.\n",
     "\n",
@@ -665,7 +666,7 @@
     "- Allows intuitive getting and setting of subsets of the data set.\n",
     "\n",
     "The following examples demonstrate how to slice, dice, and generally get and set subsets from pandas objects.\n",
-    "> While Python and NumPy indexing operators “[]” and attribute operator “.” provide quick and easy access to Pandas data structures across a wide range of use cases, directly using these standard operators has some optimization limits, and is not recommended for producing code. You are encouraged to familiarize yourself with, and become confident in, using the optimized Pandas data access methods discussed in this notebook."
+    "> While the Python and NumPy indexing operators “[]” and attribute operator “.” provide quick and easy access to Pandas data structures across a wide range of use cases, directly using these standard operators has some optimization limits, and is not recommended for production code. You are encouraged to familiarize yourself with, and become confident in, using the optimized Pandas data access methods discussed in this notebook."
    ]
   },
   {
@@ -929,7 +930,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now you can see the day and time in a representation that you are familiar with. This could be important, say, if you wanted to reduce the granularity of your data. For example, you can now group your data at an hourly or daily level, if necessary."
+    "Now you can see the date and time in a representation that you are familiar with. This could be important, say, if you wanted to reduce the granularity of your data. For example, you can now group your data at an hourly or daily level, if necessary."
    ]
   },
   {
@@ -1248,18 +1249,9 @@
    "source": [
     "## 6. Additional Resources\n",
     "\n",
-    "- *Python for Data Analysis Data Wrangling with Pandas, NumPy, and IPython*, Wes McKinney, 2012, O'Reilly Media\n",
+    "- *Python for Data Analysis, 2nd Edition: Data Wrangling with Pandas, NumPy, and IPython*, Wes McKinney, 2017, O'Reilly Media\n",
     "- [Modern Pandas](http://tomaugspurger.github.io/modern-1.html) - A series of blogs on writing idiomatic pandas code "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
