--- a/module_1/M1_NB3_VisualCommunication.ipynb
+++ b/module_1/M1_NB3_VisualCommunication.ipynb
@@ -327,32 +327,33 @@
     "\n",
     "> **Important**: \n",
     ">\n",
-    "> Executing the cell below is **optional**. This cell will run through a loop and geocode each of the city and country combinations provided as input. This process may take up to 5 minutes as the response time is influenced by the target server capacity.\n",
+    "> Executing the cell below is **optional**. This cell will run through a loop and geocode each of the city and country combinations provided as input. This process may take at least 5 minutes as the response time is influenced by the target server capacity.\n",
     "\n",
     "On a course such as this one, where there is a large number of students, you may experience a delay in response. This opportunity will therefore be used to demonstrate how you can save intermediary results as an output file, which you can then load when resuming your analysis at a later stage, without having to redo all of the processing.\n",
     "\n",
     "> **Note:**\n",
     "> \n",
-    "> Should you choose not to execute the cell, you will have to retrieve a saved copy of the geocoded data set in the cell that follows."
+    "> The code in the cell below can be uncommented and executed should you wish to do so, but it is not required to complete the notebook."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "# Now we use Geocoder in a loop to geocode the cities and update our dataframe.\n",
-    "# Wait until the In{*} indicator on the lefthand side changes to a number before proceeding.\n",
-    "## NOTE CONFIRM INCLUSION: LAST TEST was at 7s per iteration (x690); Internet connectivity was very slow on test day\n",
+    "# Wait until the In[*] indicator on the lefthand side changes to a number before proceeding.\n",
+    "# Uncomment the lines below by removing the '#' from the start of the line should you wish to execute the code.\n",
     "\n",
-    "for i in tqdm(range(len(df1))):\n",
-    "    g = geocoder.google(df1.loc[i,'geocode_input'])\n",
-    "    df1.loc[i,'lat'],  df1.loc[i,'long'] = g.lat, g.lng\n",
+    "#for i in tqdm(range(len(df1))):\n",
+    "#    g = geocoder.google(df1.loc[i,'geocode_input'])\n",
+    "#    df1.loc[i,'lat'],  df1.loc[i,'long'] = g.lat, g.lng\n",
     "    \n",
-    "print('Geocoding complete!')"
+    "#print('Geocoding complete!')"
    ]
   },
   {
@@ -511,7 +512,7 @@
     "In separate cells, create each of the following features as they relate to your understanding of big data and social analytics:\n",
     "1. A markdown cell containing a combination of headings, text, and lists.\n",
     "2. A markdown cell containing a link or image.\n",
-    "3. A code cell with no output (for example, load library) that contains comments in the cell describing the function of the cell.\n",
+    "3. A code cell with no output (for example, loading a library) that contains comments in the cell describing the function of the cell.\n",
     "4. A code cell with an output (for example, df.head() or a calculation).\n",
     "5. A code cell that produces a graph or plot.\n",
     "\n",
@@ -597,15 +598,6 @@
     "- Download a copy of the notebook in \".ipynb\" format to your local machine using \"File\", \"Download as\", and \"IPython Notebook (.ipynb)\"; and\n",
     "- Submit a copy of this file to the Online Campus."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
