--- a/module_1/M1_NB3_VisualCommunication.ipynb
+++ b/module_1/M1_NB3_VisualCommunication.ipynb
@@ -84,7 +84,7 @@
     "import matplotlib\n",
     "import folium\n",
     "import geocoder\n",
-    "from tqdm import tqdm # Added for P4\n",
+    "from tqdm import tqdm\n",
     "%pylab inline\n",
     "pylab.rcParams['figure.figsize'] = (10, 8)"
    ]
@@ -445,21 +445,18 @@
     "map_osm = folium.Map(location=mapc,\n",
     "                    zoom_start=zoom)\n",
     "\n",
-    "\n",
     "# Plot your server location.\n",
     "folium.CircleMarker(mylocation.latlng,\n",
-    "              radius=500000,\n",
-    "              popup='My Server Location',\n",
-    "              fill_color='red'\n",
-    "             ).add_to(map_osm)\n",
+    "                    radius=50,\n",
+    "                    popup='My Server Location',\n",
+    "                    fill_color='red'\n",
+    "                   ).add_to(map_osm)\n",
     "\n",
     "# Plot each of the locations that you geocoded.\n",
     "for j in range(len(df1)):\n",
     "    folium.Marker([df1.ix[j,'lat'], df1.ix[j,'long']],\n",
     "        icon=folium.Icon(color='green',icon='info-sign')\n",
     "        ).add_to(map_osm)\n",
-    "\n",
-    "\n",
     "\n",
     "# Show the map.\n",
     "map_osm"
