--- a/module_2/M2_NB1_SourcesOfData.ipynb
+++ b/module_2/M2_NB1_SourcesOfData.ipynb
@@ -135,11 +135,15 @@
     "\n",
     "- Yahoo! Finance\n",
     "- Google Finance\n",
+    "- Enigma\n",
+    "- Quandl\n",
     "- St.Louis FED (FRED)\n",
-    "- Kenneth French’s Data Library\n",
+    "- Kenneth French’s data library\n",
     "- World Bank\n",
     "- OECD\n",
-    "- Eurostat.\n",
+    "- Eurostat\n",
+    "- Thrift Savings Plan\n",
+    "- Nasdaq Trader symbol definitions.\n",
     "\n",
     "This example focuses on enriching your student dataset from Module 1, using the [World Bank's Development Indicators](https://pandas-datareader.readthedocs.io/en/latest/remote_data.html#world-bank). In the following sections, you will use the data you saved in a previous exercise, add corresponding indicators for each country in the data, and find the mean location for all observed coordinates per country."
    ]
@@ -149,7 +153,7 @@
    "metadata": {},
    "source": [
     "#### Prepare the student data\n",
-    "In the next code cell, you will load the data from disk, apply the `group by` method to group the data by country and, for each group, find the total student count and the average of their GPS coordinates. The final dataset containing the country, student count, and averaged GPS coordinates is saved as a separate DataFrame variable. "
+    "In the next code cell, you will load the data from disk, apply the `groupby` method to group the data by country and, for each group, find the total student count and the average of their GPS coordinates. The final dataset containing the country, student count, and averaged GPS coordinates is saved as a separate DataFrame variable. "
    ]
   },
   {
@@ -228,10 +232,10 @@
    },
    "outputs": [],
    "source": [
-    "#  The selected indicator is the world population, \"SP.POP.TOTL\", for the years from 2008 to 2015 \n",
+    "#  The selected indicator is the world population, \"SP.POP.TOTL\", for the years from 2008 to 2016 \n",
     "wb_indicator = 'SP.POP.TOTL'\n",
     "start_year = 2008\n",
-    "end_year = 2015\n",
+    "end_year = 2016\n",
     "\n",
     "df4 = wb.download(indicator = wb_indicator,\n",
     "                  country = ['all'],\n",
@@ -309,7 +313,13 @@
     "df7 = pd.merge(df3, df6, on='country', how='left')\n",
     "\n",
     "# Rename the columns of our merged dataset and assign to a new variable.\n",
-    "df8 = df7.rename(index=str, columns={('SP.POP.TOTL'): \"PopulationTotal_Latest_WB\"})"
+    "df8 = df7.rename(index=str, columns={('SP.POP.TOTL'): \"PopulationTotal_Latest_WB\"})\n",
+    "\n",
+    "# Drop NAN values.\n",
+    "df8 = df8[~df8.PopulationTotal_Latest_WB.isnull()]\n",
+    "\n",
+    "# Reset index.\n",
+    "df8.reset_index(inplace = True)"
    ]
   },
   {
@@ -351,14 +361,14 @@
     "for j in range(len(df8)):\n",
     "    # Plot a blue circle marker for country population.\n",
     "    folium.CircleMarker([df8.lat_mean[j], df8.long_mean[j]],\n",
-    "                    radius=df8.PopulationTotal_Latest_WB[j]/500,\n",
+    "                    radius=df8.PopulationTotal_Latest_WB[j]/20000000,\n",
     "                    popup='Population',\n",
     "                    color='#3186cc',\n",
     "                    fill_color='#3186cc',\n",
     "                   ).add_to(map_osm)\n",
     "    # Plot a red circle marker for students per country.\n",
     "    folium.CircleMarker([df8.lat_mean[j], df8.long_mean[j]],\n",
-    "                    radius=df8.student_count[j]*10000,\n",
+    "                    radius=df8.student_count[j]/50,\n",
     "                    popup='Students',\n",
     "                    color='red',\n",
     "                    fill_color='red',\n",
@@ -379,7 +389,7 @@
     "### Instructions\n",
     "\n",
     "> 1. Review the available indicators in the [World Bank](http://data.worldbank.org/indicator) dataset, and select an indicator of your choice (other than the population indicator).  \n",
-    "2. Using a **copy** of the code (from above) in the cells below, replace the population indicator with your selected indicator. Instead of returning the most recent value for your selected indicator, compute the mean and standard deviation for the years from 2006 to 2015. You will need to use the Pandas ``groupby().agg()`` chained methods, together with the following functions from NumPy: \n",
+    "2. Using a **copy** of the code (from above) in the cells below, replace the population indicator with your selected indicator. Instead of returning the most recent value for your selected indicator, compute the mean and standard deviation for the years from 2006 to 2016. You will need to use the Pandas ``groupby().agg()`` chained methods, together with the following functions from NumPy: \n",
     "  - ``np.mean``\n",
     "  - ``np.std``.\n",
     "  \n",
@@ -545,17 +555,6 @@
     "- Perform a final \"Save and Checkpoint\";\n",
     "- Download a copy of the notebook in \".ipynb\" format to your local machine using \"File\", \"Download as\", and \"IPython Notebook (.ipynb)\"; and\n",
     "- Submit a copy of this file to the Online Campus."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "  "
    ]
   }
  ],
