--- a/module_2/M2_NB2_FunFIntroduction.ipynb
+++ b/module_2/M2_NB2_FunFIntroduction.ipynb
@@ -176,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Display the unique records for \"type\"\n",
+    "# Display the unique records for column called \"type\".\n",
     "call_example.type.unique()"
    ]
   },
@@ -662,7 +662,24 @@
     "\n",
     "### Instructions\n",
     "\n",
-    "> What can you conclude from comparing the person's mobility from single weeks to the full data set? Provide a high-level summary in the cell below."
+    "> What can you conclude from comparing the person's mobility from single weeks to the full data set? Provide a high-level summary in the cell below.\n",
+    "\n",
+    "**Hint**: Look at the mobility trace for all of the data for this user."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Retrieve all locations.\n",
+    "all_points = loc[['latitude', 'longitude']].as_matrix()\n",
+    "\n",
+    "map_alltime = folium.Map(location=[42.9297,-71.4352], zoom_start=8)\n",
+    "folium.PolyLine(all_points ,color='blue', weight=2, \n",
+    "                opacity=0.5).add_to(map_week15).add_to(map_alltime)\n",
+    "map_alltime"
    ]
   },
   {
@@ -711,15 +728,6 @@
     "1. Aharony, Nadav, Wei Pan, Cory Ip, Inas Khayal, and Alex Pentland. 2011. “SocialfMRI: Investigating and shaping social mechanisms in the real world.” Pervasive and Mobile Computing 7: 643-659. \n",
     "2. Wang, Rui, Fanglin Chen, Zhenyu Chen, Tianxing Li, Gabriella Harari, Stefanie Tignor, Xia Zhou, Dror Ben-Zeev, and Andrew T. Campbell. 2014. “StudentLife: Assessing Mental Health, Academic Performance and Behavioral Trends of College Students using Smartphones.” Proceedings of the ACM Conference on Ubiquitous Computing. 2014."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
