--- a/module_2/M2_NB3_CollectYourOwnData.ipynb
+++ b/module_2/M2_NB3_CollectYourOwnData.ipynb
@@ -279,17 +279,17 @@
     "<div class=\"alert alert-info\">\n",
     "<b>Exercise 1 Start.</b>\n",
     "</div>\n",
-    "1. Using the exported visualization, identify a user id with five interactions by hovering over the Ego network shown, and take a screenshot. Embed the image as your solution to this part of the exercise.\n",
+    "\n",
+    "**Note:**\n",
+    "> Please use the supplied dataset to complete the exercise rather than your own data. \n",
+    "\n",
+    "1. Using the exported visualization, identify a correspondent id with whom the user had five interactions with for the given time range. You will need to hover over the Ego network shown, and take a screenshot. Embed the image as your solution to this part of the exercise.\n",
     "> **Important**: Use the following template to embed the image. This allows the image to be retained in the shared notebook.\n",
     ">\n",
     "`from IPython.display import Image\n",
     "Image(filename=\"yourImageFilename.ext\")`\n",
     "2. What is the recorded number of interactions observed in Week 03/07 to 09/07? You can obtain this value by changing the view in visualization from \"by week\" to \"all time range\".\n",
-    "\n",
-    "3. Of the incoming interactions across the entire time range, what percentage of these were text? Show your calculation using values from the exported visualization.\n",
-    "\n",
-    "**Note:**\n",
-    "> Please use the supplied dataset to complete the exercise rather than your own data. "
+    "3. Of the incoming interactions across the entire time range, what percentage of these were text? Show your calculation using values from the exported visualization."
    ]
   },
   {
@@ -385,15 +385,6 @@
     "- Download a copy of the notebook in \".ipynb\" format to your local machine using \"File\", \"Download as\", and \"IPython Notebook (.ipynb); and\n",
     "- Submit a copy of this file to the Online Campus."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
